# TinyRenderer

./: CMakeLists.txt  Camera.cpp  Camera.h  IShader.h  Model.cpp  Model.h  Render.cpp  Render.h  Shaders.cpp  Shaders.h  main.cpp  tgaimage.h
Vectors/: Matrix.cpp  Matrix.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.h
